Added support for annotations