@@ -9,19 +9,19 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<antlr4.version>4.7.1</antlr4.version>
 		<antlr4.visitor>true</antlr4.visitor>
+		<project.build.compilerArgs></project.build.compilerArgs>
 	</properties>	
 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>14</source>
-					<target>14</target>
-					<release>14</release>
-					<compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
+					<source>17</source>
+					<target>17</target>
+					<release>17</release>
+					<compilerArgs>${project.build.compilerArgs}</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -59,13 +59,13 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
 				<configuration>
-					<argLine>--enable-preview</argLine>
+					<argLine>${project.build.compilerArgs}</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr4-maven-plugin</artifactId>
-				<version>4.7.1</version>
+				<version>${antlr4.version}</version>
 				<executions>
 					<execution>
 						<id>antlr</id>
@@ -118,12 +118,12 @@
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4-runtime</artifactId>
-			<version>4.8</version>
+			<version>${antlr4.version}</version>
 		</dependency>
 		<dependency>
 		  <groupId>org.antlr</groupId>
 		  <artifactId>antlr4</artifactId>
-		  <version>4.8</version>
+		  <version>${antlr4.version}</version>
 		  <scope>test</scope>
 		</dependency>
 		<dependency>
